testdata/baselines/reference/submodule/conformance/checkJsdocReturnTag1.errors.txt
error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
returns.js(20,12): error TS2872: This kind of expression is always truthy.


!!! error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
==== returns.js (1 errors) ====
    // @ts-check
    /**
     * @returns {string} This comment is not currently exposed
     */
    function f() {
        return "hello";
    }
    
    /**
     * @returns {string=} This comment is not currently exposed
     */
    function f1() {
        return "hello world";
    }
    
    /**
     * @returns {string|number} This comment is not currently exposed
     */
    function f2() {
        return 5 || "hello";
               ~
!!! error TS2872: This kind of expression is always truthy.
    }
    